<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math140</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="The_problem">The Problem</string>
    <string name="Submit">Submit</string>
    <string name="Hint">Hint</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_display_timer">DisplayTimer</string>

</resources>


</resources>
