<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 >
      <ImageView
        android:id="@+id/problem"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:src="@drawable/ajsboobs"
        android:contentDescription="@string/The_problem"
        ></ImageView>

    <EditText
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_alignParentLeft="true"
        android:inputType="text" >

        <requestFocus />
    </EditText>
     <Button
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/problem"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:textColorHighlight="#cccccc"
        android:text="@string/Hint" />
     <TextView
         android:id="@+id/hintText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/problem"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
         />

      <Button
          android:id="@+id/next"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/submit"
          android:layout_alignBottom="@+id/submit"
          android:layout_alignRight="@+id/solution"
          android:text="@string/Next" />
      <Button
          android:id="@+id/previous"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/submit"
          android:layout_alignBottom="@+id/submit"
          android:layout_alignLeft="@+id/solution"
          android:text="@string/Previous" />

      <Button
          android:id="@+id/submit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:text="@string/Submit" />

</RelativeLayout>
